syntax = "proto3";
package example;
option go_package = "c-z.dev/go-micro/tests/proto";

message HelloRequest {
  string Name = 1;
}

message HelloReply {
  string Welcome = 1;
  int64 Time = 2;
}

message HelloStreamRequest {
  int64 Time = 1;
  string Content = 2;
}

message HelloStreamReply {
  int64 Time = 1;
  string Content = 2;
}

service ExampleSrv {
  rpc Hello(HelloRequest) returns (HelloReply) {}
  rpc HelloStreamRequestX(stream HelloStreamRequest) returns (HelloStreamReply) {}
  rpc HelloStreamReplyX(HelloStreamRequest) returns (stream HelloStreamReply) {}
  rpc HelloStreamRequestReply(stream HelloStreamRequest) returns (stream HelloStreamReply) {}
}

